overengineering = rounding errors

--- a/Day3_AoC.ipynb
+++ b/Day3_AoC.ipynb
@@ -1,9 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "--- Day 3: Toboggan Trajectory ---\n",
     "With the toboggan login problems resolved, you set off toward the airport. While travel by toboggan might be easy, it's certainly not safe: there's very minimal steering and the area is covered in trees. You'll need to see which angles will take you near the fewest trees.\n",
     "\n",
@@ -59,12 +62,13 @@
     "\n",
     "In this example, traversing the map using this slope would cause you to encounter 7 trees.\n",
     "\n",
-    "Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?"
+    "Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,9 +174,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "--- Part Two ---\n",
     "Time to check the rest of the slopes - you need to minimize the probability of a sudden arboreal stop, after all.\n",
     "\n",
@@ -187,12 +194,13 @@
     "\n",
     "In the above example, these slopes would find 2, 7, 3, 4, and 2 tree(s) respectively; multiplied together, these produce the answer 336.\n",
     "\n",
-    "What do you get if you multiply together the number of trees encountered on each of the listed slopes?"
+    "What do you get if you multiply together the number of trees encountered on each of the listed slopes?\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
